[package]
name = "enclave"
version = "0.1.0"
authors = ["me020523 <me020523@gmail.com>"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_backtrace = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_backtrace_sys = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_build_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_cov = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_demangle = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand_derive = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive_internals = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tdh = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tprotected_fs = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_ucrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_unwind = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
